<resources>
    <string name="app_name">POSAssignment</string>
    <string name="new_order">New Order</string>
    <string name="orders_history">Orders History</string>
    <string name="reports">Reports</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="cart_empty_pos_text">Cart is Empty. add items to show.</string>
    <string name="tax">Tax</string>
    <string name="discount">Discount</string>
    <string name="customer_colon">Customer:</string>
    <string name="validation_category_name_empty_message">Category Name cannot be empty.</string>
    <string name="add_new_product">Add New Product</string>
    <string name="barcode">Barcode</string>
    <string name="product_name">Product Name</string>
    <string name="category">Category</string>
    <string name="amount_hint">0.00</string>
    <string name="update_product">Update Product</string>
    <string name="error">Error</string>
    <string name="products">Products</string>
    <string name="products_list_empty_text">No products added yet.</string>
    <string name="customers_list_empty_text">No customers added yet.</string>
    <string name="orders_list_empty_text">No orders placed yet.</string>
    <string name="no_search_results_text">No results matched your filter.</string>
    <string name="search_products_hint">Search products …</string>
    <string name="search_orders_hint">Search orders …</string>
    <string name="search_customers_hint">Search customers …</string>
    <string name="total_products_x">Total products: %1$d</string>
    <string name="total_customers_x">Total customers: %1$d</string>
    <string name="total_x">Total %1$d</string>
    <string name="total_items">Total Items</string>
    <string name="subtotal">Subtotal</string>
    <string name="clear">Clear</string>
    <string name="apply_discount">Apply Discount</string>
    <string name="percentage">Percentage</string>
    <string name="amount">Amount</string>
    <string name="aed">AED</string>
    <string name="new_total">New Total</string>
    <string name="cancel">Cancel</string>
    <string name="item_details">Item Details</string>
    <string name="percentage_sign">%</string>
    <string name="update">Update</string>
    <string name="checkout">Checkout</string>
    <string name="orders">Orders</string>
    <string name="order_id">Order ID</string>
    <string name="status">Status</string>
    <string name="payment">Payment</string>
    <string name="items">Items</string>
    <string name="created_at">Created At</string>
    <string name="tax_type">Tax Type</string>
    <string name="tax_value">Tax Value</string>
    <string name="add">Add</string>
    <string name="enter_tax_value">Enter Tax Value</string>
    <string name="settings">Settings</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="_start_date_">-- Start Date --</string>
    <string name="_end_date_">-- End Date --</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="customers">Customers</string>
    <string name="select_customer">Select Customer</string>
    <string name="customer_name">Customer name</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="new_customer_name">New Customer Name</string>
    <string name="add_new_category">Add New Category</string>
    <string name="category_name">Category Name</string>
    <string name="assign_customer">Assign Customer</string>
    <string name="customer_x">Customer: %1$s</string>
    <string name="visitor">Visitor</string>
    <string name="unknown">Unknown</string>
    <string name="customer">Customer</string>
    <string name="print_quotation">Print Quotation</string>
    <string name="pos_system">POS System</string>
    <string name="home">Home</string>
    <string name="version_x">Version  %1$s</string>
    <string name="logged_in_as_x">Logged in as  %1$s</string>
    <string name="printer_not_configured_text">Printer is not Configured</string>
    <string name="printer_configured_text">Printer is Configured</string>
</resources>