<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/DialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_customer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim12"
        android:src="@drawable/ic_close_24"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        app:tint="@color/white" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/titleSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tvTitle, ivClose"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        >

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallSpace"
            android:background="@drawable/textview_background_grey"
            android:backgroundTint="@color/grey_200"
            app:queryBackground="@android:color/transparent"
            android:padding="0dp"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_customers_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <TextView
            android:id="@+id/tvTotalCustomers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallSpace"
            android:padding="@dimen/smallSpace"
            android:text="@string/total_customers_x"
            android:textSize="@dimen/mediumFont"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintStart_toStartOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/dim60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:spanCount="3"
        tools:listitem="@layout/item_customer" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/noResultsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/dim200"
            android:layout_height="@dimen/dim200"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_data_object_24"
            app:tint="@color/grey_500"/>

        <TextView
            android:id="@+id/tvNoResultsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/customers_list_empty_text"
            android:textColor="@color/grey_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customerSearchLayout" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvNoSearchResultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/no_search_results_text"
        android:textColor="@color/grey_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_new_customer"
        app:srcCompat="@drawable/ic_add_24"
        android:backgroundTint="?attr/colorPrimary"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/largeSpace"
        />

</androidx.constraintlayout.widget.ConstraintLayout>