<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallSpace"
            android:background="@drawable/textview_background_grey"
            android:backgroundTint="@color/grey_200"
            app:queryBackground="@android:color/transparent"
            android:padding="0dp"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_orders_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".6"
            />

        <Spinner
            android:id="@+id/spCategoryFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_background_grey_radius_6"
            app:layout_constraintTop_toTopOf="@+id/searchView"
            app:layout_constraintBottom_toBottomOf="@+id/searchView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent=".4"
            />

        <TextView
            android:id="@+id/tvTotalProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallSpace"
            android:padding="@dimen/smallSpace"
            android:text="@string/total_products_x"
            android:textSize="@dimen/mediumFont"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/ivAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallSpace"
            android:padding="@dimen/smallSpace"
            android:src="@drawable/ic_add_24"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintEnd_toEndOf="parent"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/smallSpace"
        android:clipToPadding="false"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:spanCount="3"
        tools:listitem="@layout/item_sales_product" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/noResultsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/dim200"
            android:layout_height="@dimen/dim200"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_data_object_24"
            app:tint="@color/grey_500"/>

        <TextView
            android:id="@+id/tvNoResultsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/products_list_empty_text"
            android:textColor="@color/grey_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customerSearchLayout" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvNoSearchResultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/no_search_results_text"
        android:textColor="@color/grey_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>